--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <form>
           <h3> Top Names Questionaire </h3>
           <form>
-            
-            <input type="text" name="username" value="default value"> </input>  <!-- creates an input field for the user, name relates it to a variable -->
+            <label for="name">Enter your favorite name</label>
+            <br>
+            <input type="text" name="username" value="default value" id="name"> </input>  <!-- creates an input field for the user, name relates it to a variable, type can be text, password, number. Type="range" creates a slider-->
           </form> 
         </form>
         </p>
