--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
             <input type="text" name="username" value="default value" id="name"> </input>  <!-- creates an input field for the user, name relates it to a variable, type can be text, password, number. Type="range" creates a slider-->
           </form> 
         </form>
+    
+        <form>
+          <p>What is sum of 1 + 1?</p>
+          <input type="radio" id="two" name="answer" value="2">
+          <label for="two">2</label>
+          <br>
+          <input type="radio" id="eleven" name="answer" value="11">
+          <label for="eleven">11</label>
+        </form>
+        <form>
+          <label for="lunch">What's for lunch?</label>
+          <select id="lunch" name="lunch">
+          <option value="pizza">Pizza</option>
+          <option value="curry">Curry</option>
+          <option value="salad">Salad</option>
+          <option value="ramen">Ramen</option>
+          <option value="tacos">Tacos</option>
+          </select>
+        </form>
         </p>
         
       <h1 id="bottom"> I'm Afraid We've Reached The End </h1> <!-- marks the end of the page -->
