--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
         <hr> 
         <br>                                               <!-- Some sort of golf picture over here pbig -->
       <h4> Bringing the league to you with weekly 
-        <br> statistics, events, scheadules
+        <br> statistics, events, schedules
         <br> and more </h4>
     
     <section>
